--- a/index.html
+++ b/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <a href="" class="logo">S</a>
+                <ul class="navigation-holder">
+                    <li class="nav-links">
+                        <a href="#">Explore</a>
+                    </li>
+                    <li class="nav-links">
+                        <a href="#">Mentors</a>
+                    </li>
+                    <li class="nav-links">
+                        <a href="#">Blog</a>
+                    </li>
+                    <li class="nav-links">
+                        <a href="#">Community</a>
+                    </li>
+                </ul>
+            </nav>
+            <section class="header-title">
+                <span class="header-subtitle-text">featured class</span>
+                <h1 class="header-title-text">
+                    The role of
+                    User Interface
+                    Designer
+                </h1>
+
+                <a href="#" class="join">
+                    <img src="/img/img/audio.png" alt="">
+                    <span class="join-text"> join <br> The class</span>
+                </a>
+            </section>
+        </div>
+    </header>
 </body>
 </html>
