--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
                     <span class="join-text"> join <br> The class</span>
                 </a>
             </section>
+            <section class="header-info-block">
+                <div class="card-info">
+                    <img src="/img/img/girl-avatar.png" alt="" class="card-info-img">
+                    <h2 class="info-title">Karen William</h2>
+                    <span class="info-subtitle">Semior Designer</span>
+                    </div>
+                    <div class="card-about"></div>
+                    <div></div>
+                
+            </section>
         </div>
     </header>
 </body>
