--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#">Explore</a>
           </li>
           <li class="nav-links">
-            <a href="#">Mentors</a>
+            <a href="#">Mentos по скидке</a>
           </li>
           <li class="nav-links">
             <a href="#">Blog</a>
@@ -28,36 +28,37 @@
         </ul>
       </nav>
       <section class="header-title">
-        <span class="header-subtitle-text">featured class</span>
+        <span class="header-subtitle-text">my life</span>
         <h1 class="header-title-text">
-          The role of User Interface Designer
+          Booooooring
         </h1>
         <a href="#" class="join">
           <img src="img/icons/arrow.svg" alt="">
-          <span class="join-text">Join <br> The Class</span>
+          <span class="join-text">Пошли <br>В кс</span>
         </a>
       </section>
       <section class="header-info-block">
         <div class="card-info">
-          <img src="img/girl-avatar.png" alt="" class="card-info-img">
-          <h2 class="info-title">Karen William</h2>
-          <span class="info-subtitle">Senior Designer</span>
+          <img src="https://steamuserimages-a.akamaihd.net/ugc/1808770260137519490/EB5504E21A5B2AAFDBC7208C45FDD18EE0504C2F/?imw=512&amp;imh=288&amp;ima=fit&amp;impolicy=Letterbox&amp;imcolor=%23000000&amp;letterbox=true" alt="" class="card-info-img">
+          <h2 class="info-title">полный брух</h2>
+          <span class="info-subtitle">спящий за компом</span>
         </div>
 
         <div class="card-about">
           <div class="about-text-wrapper">
             <span class="about-subtitle-text">About</span>
             <p class="about-desc">
-              quis nostrud exercitation ullamco
-              laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in
+              я люблю спать но окоянные уроки не дают мне этого сделать
             </p>
+
           </div>
 
           <div class="audio-holder">
             <div class="audio-block">
-              <img src="img/man-avatar.png" alt="">
+              <img width="200" src="https://cybersport.metaratings.ru/upload/iblock/fcd/fcd9b2aa1e200e097c4b5cec630db541.jpg" alt="">
               <div class="audio-container">
+                <span class="info-subtitle" >а это-злой симпле</span>
+                
                 <div class="audio-detail">
                   <div class="control">
                     <i class="fi-rr-play" id="playPause"></i>
@@ -88,14 +89,14 @@
   <main class="main-content">
     <div class="container">
       <section class="courses">
-        <h1 class="course-section-title">Popular Courses <br> this week</h1>
+        <h1 class="course-section-title">Время на то чтобы сделать дз полностью? <br>...</h1>
 
         <section class="course-row">
           <div class="course-card card-big">
             <div class="img-container img-card-1">
-              <span class="btn-time">15 mins</span>
+              <span class="btn-time">24 hours </span>
               <span class="btn-raiting">
-                4.8
+                0.0
                 <img src="img/icons/star.svg" width="15" height="15" alt="">
               </span>
             </div>
